# sae-object-detector

./: .gitignore  Dockerfile  docker_build.sh  pyproject.toml
.github/workflows/: build-publish-latest.yml  create-release.yml  pr_build.yaml
debian/: requirements.txt
