[tool.poetry]
name = "objectdetector"
version = "4.2.0"
description = "Wraps a state-of-the-art detection model and communicates on its inputs and outputs following visionapi."
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.0.0"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.5.2" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.14.2" }
redis = "^5.0.0"
pydantic-settings = "^2.0.3"
prometheus-client = "^0.17.1"
setuptools = "^74.0.0"

# 
[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
# DO NOT CHANGE THE VERSIONS BELOW, they must match the versions in the docker base image (https://github.com/starwit/build-containers/tree/main/sae-cv-base)
tensorrt-cu12 = {version = "10.13.2.6", source = "nvidia"}
tensorrt-cu12-libs = {version = "10.13.2.6", source = "nvidia"}
tensorrt-cu12-bindings = {version = "10.13.2.6", source = "nvidia"}
openvino = "2025.4.0"
ultralytics = "8.3.191"

[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
